// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should render with border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 hGTGw"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow should render with onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 gSLHww group"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow should render without border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 hTjdSD"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow should render without onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 hGTGw"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;
